# ap-2026-1-62

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/: Artificial-Intelligence-journals.xlsx  DETERIORO-SUPERSOLIDARIA-2022-06.xlsx  USDINR_Options_2018_2025.parquet  adult_modified.data  auto-mpg.data  scholarships.json  scholarships_nested.ndjson  sft_training_conversations.json
notebooks/: AP_Evaluación_1.ipynb  Análisis_exploratorio_de_datos_EDA.ipynb  Carga_de_datos_con_Pandas.ipynb  Carga_de_otros_formatos_de_datos.ipynb  Construcción_de_modelos_de_aprendizaje_de_máquina_con_Scikit_Learn.ipynb  Evaluación_de_modelos.ipynb  Flujo_de_trabajo_integrado_con_Pipeline_y_ColumnTransformer.ipynb  Modelos_de_boosting_avanzados.ipynb  Modelos_de_regresión_Lasso.ipynb  Modelos_de_regresión_lineal_polinómicos.ipynb  Modelos_de_regresión_logística_regularizados.ipynb  Modelos_regularizados_y_sintonización_de_hiperparámetros.ipynb  Otros métodos de sintonización_de_hiperparámetros.ipynb  Phol_Leo_Taller_ingeniería_de_datos.ipynb  Phol_Leonardo_Taller_EDA.ipynb  Preparación_de_los_datos_con_Pandas.ipynb  Procesamiento_de_datos_categoricos.ipynb  Procesamiento_de_datos_numericos.ipynb  Regresión_logística.ipynb  Taller_EDA.ipynb  Uso_de_ColumnTransformer_para_preprocesar_datos.ipynb
prueba/: pyproject.toml
