[project]
name = "ap-2026-1-62"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas==2.3",
    "pyarrow>=23.0.1",
    "scikit-learn==1.7.2",
    "sqlalchemy>=2.0.46",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
# "E" (Errores de estilo), "F" (Errores de Pyflakes), "I" (Orden de imports)
select = ["E", "F", "I"]
# Ignorar advertencias comunes en notebooks como variables no usadas en celdas de prueba
ignore = ["F841"] 

[tool.ruff.lint]
# Esto le dice a Ruff que limpie las importaciones no usadas automáticamente
fixable = ["F401", "I001"]

[tool.ruff.lint.isort]
known-third-party = ["pandas", "numpy", "sklearn", "matplotlib"]